gcc/testsuite/rust/rustc/ui/resolve/explicit-self-lowercase-param.rs
struct Foo;

impl Foo {
    fn do_nothing(self: Box<self>) {} // { dg-error "" "" { target *-*-* } }
// { help "" "" { target *-*-* } .-1 }
}

fn main() {}

